[Navbar] Add fixed position and z-index to header for fixed [Navbar]

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,7 @@ section.home {
   background-size: cover;
   background-blend-mode: multiply;
 }
+
+main > section {
+  padding-top: 4rem;
+}
